# jupyter_console

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test.txt
.github/workflows/: python-package.yml
docs/: Makefile  autogen_config.py  changelog.rst  conf.py  environment.yml  index.rst  make.bat  release.rst  requirements.txt
jupyter_console/: _version.py  app.py  completer.py  interactiveshell.py  ptshell.py  utils.py
jupyter_console/tests/: test_console.py  test_image_handler.py
scripts/: jupyter-console
